<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Panel_Shahrdari</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
        <string name="str_shahrdar">شهردار</string>
        <string name="str_shora">شورا</string>
        <string name="str_newspapre">روزنامه</string>
        <string name="str_regards_images">تصاویر ارسالی</string>
        <string name="str_regards_competition">ارسالی مسابقه</string>
        <string name="str_login">مدیریت لاگین</string>
        <string name="str_galery">مدیریت گالری</string>
        <string name="str_news_shahrdary">اخبار شهرداری</string>
        <string name="str_notification">اطلاعیه ها</string>
        <string name="str_incantation">تبلیغات</string>

        <string name="str_comment">نظرات</string>
        <string name="str_taedcomment">تایید اطلاعیه ها</string>
        <string name="str_addcomment">اضافه کردن اطلاعیه</string>
        <string name="str_editcomment">ویرایش اطلاعیه ها</string>
        <string name="ok">تایید</string>
        <string name="cancel">انصراف</string>
        <string name="yes">بله</string>
        <string name="no">نخیر</string>
        <string name="retry">تلاش مجدد</string>
        <string name="ignore">صرف نظر</string>
        <string name="PleaseWait">لطفا صبر کنید</string>
        <string name="ConnectingToServer">در حال برقراری ارتباط با سرور</string>
        <string name="username">نام کاربری</string>
        <string name="password">رمز عبور</string>
        <string name="welcom">ورود</string>
        <string name="delet">حذف</string>
        <string name="answer">پاسخ </string>
        <string name="send_answer">ارسال پاسخ</string>
        <string name="title">تیتر خبر</string>
        <string name="textnews">متن خبر</string>
        <string name="date">تاریخ</string>
        <string name="time">زمان</string>
        <string name="groupnews">گروه خبری</string>
        <string name="back">بازگشت</string>
        <string name="str_title">تیتر اطلاعیه</string>
        <string name="sty_text">متن خبر</string>
        <string name="str_send">ارسال</string>
        <string name="str_edit">ویرایش</string>
        <string name="str_panel">شهرداری باغبادران</string>
        <string name="str_loginm">مدیریت لاگین</string>
        <string name="str_panel1">پنل شهرداری</string>
        <string name="taed">تایید</string>
        <string name="str_new_job">تایید مشاغل</string>
        <string name="name_mahal">نام محل کار</string>
        <string name="modir">مدیریت</string>
        <string name="address">آدرس</string>
        <string name="tozih">توضیحات</string>
        <string name="group">گروه شغلی</string>
        <string name="point">:</string>
        <string name="phon">تلفن</string>
        <string name="str_job">تایید مشاغل</string>
        <string name="image_categry">دسته بندی</string>
        <string name="image_category_item0">همه</string>
        <string name="job_item1">امور خدماتی</string>
        <string name="job_item2">فروش کالا</string>
        <string name="sub_jobs_name">نام محل</string>
        <string name="sub_jobs_managenment">مدیریت</string>
        <string name="sub_jobs_address">آدرس</string>
        <string name="sub_jobs_phone">تلفن</string>
        <string name="sub_job_desc">توضیحات</string>
        <string name="str_n">:</string>
        <string name="str_group_job">گروههای شغلی</string>
        <string name="str_grup_2">زیر گروه شغلی</string>
        <string name="str_addimg">اضافه کردن تصویر</string>
        <string name="khadamati_other">سایر امور خدماتی</string>
        <string name="forosh_other">سایر</string>
        <string name="str_newjob">لطفا تمام موارد را پر کنید</string>



</resources>
