<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edttitlenotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right|center"
            android:hint="@string/str_title" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtText"
            android:layout_width="match_parent"
            android:layout_height="365dp"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/sty_text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnsendnotif"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/back_shahrdar"
        android:text="@string/str_send" />

</LinearLayout>