<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgnews"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/img_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/edttitle"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|center"
            android:gravity="bottom|right|center"
            android:padding="5dp"
            android:text="@string/title"
            android:textColor="#000000"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/edttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <TextView
            android:id="@+id/txtnews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:gravity="bottom|right|center"
            android:padding="5dp"
            android:text="@string/textnews"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/edttime"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ems="10" />

        <TextView
            android:id="@+id/txttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|center"
            android:layout_weight="1"
            android:gravity="bottom|left|center"
            android:text="@string/time"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtdate"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10" />

        <TextView
            android:id="@+id/txtdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|center"
            android:gravity="right|center"
            android:padding="3dp"
            android:text="@string/date"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <Spinner
            android:id="@+id/spngroup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/txtgroup"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|left|center"
            android:layout_weight="1"
            android:gravity="bottom|left|center"
            android:padding="3dp"
            android:text="@string/groupnews"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/back_shahrdar"
            android:text="@string/back" />

        <Button
            android:id="@+id/btntaednews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/back_shahrdar"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>